# cmake-seed

./: .abstruse.yml  .gitignore  CMakeLists.txt  README.md
include/: libstart.h
src/: libstart.cpp  main.cpp
tests/: CMakeLists.txt  initTest.cpp
